<resources>
    <string name="app_name">Cryptongy</string>
    <string name="account">Accounts</string>
    <string name="acc_exchange">Exchange</string>
    <string name="acc_level">Level</string>
    <string name="acc_apiKey">API Key</string>
    <string name="add">add</string>
    <string name="acc_btn_add">Add</string>
    <string name="setting_notification">Notifications</string>
    <string name="setting_vibrate">Vibrate</string>
    <string name="setting_default_exchange">Default Exchange</string>
    <string name="setting_sound">Sound</string>
    <string name="settings">Settings</string>
    <string name="about_title">Cryptongy version 1.0 @ 2017 CryptoSoft</string>
    <string name="about_app">App Features</string>
    <string name="about_feature1">View your exchange wallet</string>
    <string name="about_feature2">Control your opened and view closed orders</string>
    <string name="about_feature3">Trade on your coins using standard and advanced conditions </string>
    <string name="about_feature4">Put alerts on coin prices</string>
    <string name="about_future">Future Work</string>
    <string name="about_future1">Withdraw and deposit</string>
    <string name="about_future2">More advanced trade</string>
    <string name="about_disclaimer">All trade communication is direct to the exchange with no intermediate servers.
    \n Contact us on info@cryptongy.com</string>
    <string name="setting">Settings</string>
    <string name="order">Orders</string>
    <string name="fetch_msg">Fetching data. Please wait.</string>
    <string name="cancle_msg">Canceling order. Please wait.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="str_total">Total</string>
    <string name="str_btc_sign">B</string>
    <string name="str_read">Read</string>
    <string name="str_wallet">Wallet</string>
    <string name="str_btc_precision">%.9f</string>
    <string name="str_dollar_precision">%.4f</string>
    <string name="noAPI">No api key available</string>
    <string name="wallet">Wallet</string>
    <string name="home">Watch List</string>
    <string name="arbitage">Aribitage</string>

    <string-array name="coin_array">
        <item>Bittrex</item>
        <item>Binance</item>
    </string-array>


    <string-array name="exchange_value_array_wallet">
        <item>Bittrex</item>
        <item>Binance</item>
        <item>All</item>
    </string-array>

    <string name="donnation_title">Thanks for your donation</string>
    <string name="donnation_Address">Payment</string>
    <string name="donnation_send">Please follow the link: </string>
    <string name="donnation_to"> https://gocps.net/8rwpz7nok3wfkbockqks18ndg/</string>
    <string name="trade">Trade</string>
    <string name="conditional_trade">Conditional Trade</string>
    <string name="alert">Alert</string>
    <string name="setting_sync">Automatic Sync</string>
    <string name="watch_btc">BTC </string>
    <string name="watch_coin">Coin</string>
    <string name="watch_price">Price</string>
    <string name="watch_volume">Volume</string>
    <string name="cancle_confirm">Do you want to cancle?</string>
    <string name="limit_msg">Do you want to place Order?</string>
</resources>
