<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="crypto.soft.cryptongy.feature.aboutUs.AboutUsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/account_bg"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary" />

        <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar">


            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/about_us_icon" />

        <crypto.soft.cryptongy.feature.shared.customView.CalTextView
            android:id="@+id/txtTitle"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="About Us"
            android:textColor="#FFFFFF" />


        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="18dp"
                android:paddingTop="18dp">

                <crypto.soft.cryptongy.feature.shared.customView.CabTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="13dp"
                    android:text="@string/about_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/about_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="18dp"
                    android:background="@color/colorPrimary" />

                <crypto.soft.cryptongy.feature.shared.customView.CabTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/ic_about_corner"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="15dp"
                    android:text="@string/about_app"
                    android:textColor="@color/about_sub_title"
                    android:textSize="@dimen/about_sub_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="@dimen/about_sub"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="@dimen/about_icon_top"
                        android:background="@drawable/ic_green_circle" />

                    <crypto.soft.cryptongy.feature.shared.customView.CalTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about_feature1"
                        android:textColor="@color/setting_text"
                        android:textSize="@dimen/about_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="@dimen/about_sub"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="@dimen/about_icon_top"
                        android:background="@drawable/ic_green_circle" />

                    <crypto.soft.cryptongy.feature.shared.customView.CalTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about_feature2"
                        android:textColor="@color/setting_text"
                        android:textSize="@dimen/about_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="@dimen/about_sub"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="@dimen/about_icon_top"
                        android:background="@drawable/ic_green_circle" />

                    <crypto.soft.cryptongy.feature.shared.customView.CalTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_green_circle"
                        android:text="@string/about_feature3"
                        android:textColor="@color/setting_text"
                        android:textSize="@dimen/about_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="@dimen/about_sub"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="@dimen/about_icon_top"
                        android:background="@drawable/ic_green_circle" />

                    <crypto.soft.cryptongy.feature.shared.customView.CalTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about_feature4"
                        android:textColor="@color/setting_text"
                        android:textSize="@dimen/about_text" />

                </LinearLayout>


                <crypto.soft.cryptongy.feature.shared.customView.CabTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:background="@drawable/ic_about_corner"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="15dp"
                    android:text="@string/about_future"
                    android:textColor="@color/about_sub_title"
                    android:textSize="@dimen/about_sub_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="@dimen/about_sub"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="@dimen/about_icon_top"
                        android:background="@drawable/ic_green_circle" />

                    <crypto.soft.cryptongy.feature.shared.customView.CalTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about_future1"
                        android:textColor="@color/setting_text"
                        android:textSize="@dimen/about_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="@dimen/about_sub"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="8dp"
                        android:layout_height="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="@dimen/about_icon_top"
                        android:background="@drawable/ic_green_circle" />

                    <crypto.soft.cryptongy.feature.shared.customView.CalTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/about_future2"
                        android:textColor="@color/setting_text"
                        android:textSize="@dimen/about_text" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <crypto.soft.cryptongy.feature.shared.customView.CalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardView"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/about_bottom"
            android:textColor="@color/setting_text"
            android:text="All trade communication is direct to the exchange with no intermediate servers." />

    </RelativeLayout>

</ScrollView>